...
    <string name="error_station_load">Could not connect to station</string>
    <string name="error_list_update">Could not connect to radio browser server</string>

    <string name="share_action">Share station link with..</string>

    <string name="nav_item_stations">KRR - stations</string>
    <string name="nav_item_starred">Favorites</string>
    <string name="nav_item_history">History</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_alarm">Alarm</string>

    <string name="about_text">The <b>KRR</b> application uses the shared streams of broadcasters. Is not the sender of the content.\n\ncontact: grz3chu@gmail.com\nwww: https://krr.org.pl\n\nApplication source:\nhttps: //github.com/grz3chu/krr-radio-app\n\n\n\nThis application is free software licensed under the GPLv3.\nhttps: //www.gnu.org/licenses/gpl-3.0.html\nThe application uses the RadioDroid
    <string name="about_version">Version: %1$s</string>
...
    <string name="notify_deleted_favorites">The favorites have been deleted</string>
    <string name="notify_deleted_history">The history has been deleted</string>

    <string name="notify_open_link_failure">No application found to open the link</string>

    <string name="notify_station_removed_from_list">1 Removed</string>
    <string name="action_station_removed_from_list_undo">UNDO</string>

    <string name="alert_install_lyrics_app">QuickLyric is not installed on your device. Would you like to get it from Google Play Store?</string>

    <string name="alert_delete_history">Do you really want to delete the history?</string>
    <string name="alert_delete_favorites">Do you really want to delete all favorites?</string>
    <string name="yes">Yes</string>
...
